Fix z-index and header overlay issues, add bustle to header.

--- a/apps/pinpoint/static/pinpoint/themes/nastygal/bustle.css
+++ b/apps/pinpoint/static/pinpoint/themes/nastygal/bustle.css
@@ -2213,7 +2213,7 @@
   #bustle .header {
     height: 56px;
     position: fixed;
-    z-index: 10;
+    z-index: 11;
     top: 0;
     left: 0;
     right: 0;
